--- a/pom.xml
+++ b/pom.xml
@@ -85,12 +85,12 @@
       <artifactId>spring-aop</artifactId>
       <version>${spring-framework.version}</version>
     </dependency>
-    <!-- -->
-    <!--<dependency>-->
-      <!--<groupId>org.springframework.security</groupId>-->
-      <!--<artifactId>spring-security-web</artifactId>-->
-      <!--<version>${org.springframework.security.version}</version>-->
-    <!--</dependency>-->
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>${org.springframework.security.version}</version>
+    </dependency>
 
 
     <dependency>
