--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   <properties>
     <spring-data-jpa.version>1.9.4.RELEASE</spring-data-jpa.version>
     <spring-framework.version>4.1.6.RELEASE</spring-framework.version>
-    <org.springframework.security.version>3.2.3.RELEASE</org.springframework.security.version>
+    <org.springframework.security.version>4.1.0.RELEASE</org.springframework.security.version>
     <slf4j.version>1.7.7</slf4j.version>
     <log4j.version>1.2.17</log4j.version>
     <struts2.version>2.3.24</struts2.version>
@@ -76,14 +76,25 @@
       <artifactId>spring-aop</artifactId>
       <version>${spring-framework.version}</version>
     </dependency>
-
+    <!--spring security依赖-->
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-web</artifactId>
       <version>${org.springframework.security.version}</version>
     </dependency>
-
-
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>${org.springframework.security.version}</version>
+    </dependency>
+    <!--Spring Framework Bom-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-framework-bom</artifactId>
+      <version>4.2.5.RELEASE</version>
+      <type>pom</type>
+      <scope>import</scope>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -161,8 +172,20 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.11</version>
     </dependency>
+    <dependency>
+      <groupId>javax</groupId>
+      <artifactId>javaee-api</artifactId>
+      <version>7.0</version>
+    </dependency>
   </dependencies>
-
+  <repositories>
+    <!-- spring-security必须得加-->
+    <repository>
+      <id>spring-snapshot</id>
+      <name>Spring Snapshot Repository</name>
+      <url>http://repo.spring.io/snapshot</url>
+    </repository>
+  </repositories>
   <build>
     <finalName>My</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
