--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <struts2.version>2.3.24</struts2.version>
     <jstl.version>1.2</jstl.version>
     <hibernate.version>4.3.6.Final</hibernate.version>
-    <!--jdk驱动-->
+    <!--jdk驱````````动-->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
@@ -150,7 +150,11 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.5.0</version>
+    </dependency>
     <!-- struts2的json依赖 -->
     <dependency>
       <groupId>org.apache.struts</groupId>
