--- a/pom.xml
+++ b/pom.xml
@@ -103,9 +103,9 @@
     </dependency>
     <!-- c3p0连接池的配置 -->
     <dependency>
-      <groupId>c3p0</groupId>
+      <groupId>com.mchange</groupId>
       <artifactId>c3p0</artifactId>
-      <version>0.9.1.2</version>
+      <version>0.9.5.3</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
@@ -154,6 +154,12 @@
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis</artifactId>
       <version>3.5.0</version>
+    </dependency>
+    <!-- spring 整合mybatis依赖 -->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-spring</artifactId>
+      <version>1.3.2</version>
     </dependency>
     <!-- struts2的json依赖 -->
     <dependency>
